# nerdsystem-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml.example  main.py  members.json  pyproject.toml  requirements.txt  start.py  start.sh  test.py
.github/workflows/: docker-publish.yml
Enums/: member_color.py
Handlers/: logger.py  sp_apihttp.py  sp_websocket.py  taskhandler.py
cogs/Commands/: front.py  fronters.py  removealterfront.py  setalterfront.py  sync.py  unfront.py  whitelist.py
cogs/Events/: on_front.py  on_member_join.py  on_member_remove.py  on_music_sent.py  on_ready.py  on_unfront.py
utils/: sp_apihttp.py  sp_websocket.py
